syntax = "proto3";

option go_package = "github.com/chucky-1/broker/protocol";

package pgrpc;

service Broker {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn (SignInRequest) returns (SignInResponse) {}
  rpc OpenPosition (OpenPositionRequest) returns (OpenPositionResponse) {}
  rpc ClosePosition (ClosePositionRequest) returns (ClosePositionResponse) {}
  rpc SetBalance (SetBalanceRequest) returns (SetBalanceResponse) {}
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}
}

message SignUpRequest {
  float deposit = 1;
}

message SignUpResponse {
  int32 user_id = 1;
}

message SignInRequest {
  int32 user_id = 1;
}

message SignInResponse {}

message OpenPositionRequest {
  int32 user_id = 1;
  int32 symbol_id = 2;
  float price = 3;
  int32 count = 4;
  float stop_loss = 5;
  float take_profit = 6;
  bool is_buy = 7;
}

message OpenPositionResponse {
  int32 position_id = 1;
}

message ClosePositionRequest {
  int32 position_id = 1;
}

message ClosePositionResponse {}

message SetBalanceRequest {
  int32 user_id = 1;
  float sum = 2;
}

message SetBalanceResponse {}

message GetBalanceRequest {
  int32 user_id = 1;
}

message GetBalanceResponse {
  float sum = 1;
}
